[package]
authors = ["Timothy Lee <u6018802@anu.edu.au>"]
edition = "2018"
readme = "README.md"
name = "meshlight"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-semihosting = "0.5.1"
cortex-m-rtfm = "0.4.1"
alloc-cortex-m = "0.3.5"
nb = "0.1.1"

[dependencies.stm32f1]
version = "0.6.0"
features = ["stm32f103", "rt"]

[dependencies.stm32f1xx-hal]
version = "0.2.0"
features = ["stm32f103", "rt"]

# this lets you use `cargo fix`!
[[bin]]
name = "meshlight"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
